--- a/ProyectoAccesoriosNauticos/src/Vista/Error.form
+++ b/ProyectoAccesoriosNauticos/src/Vista/Error.form
@@ -74,7 +74,7 @@
               <Color blue="5c" green="36" red="2" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Comic Sans MS" size="18" style="0"/>
+              <Font name="Agency FB" size="18" style="0"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
